fix: enhance scrollbar styling and update text selection colors

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -185,6 +185,10 @@
     }
 }
 
+html::selection {
+    @apply text-primary bg-muted
+}
+
 .scrollbar-hide::-webkit-scrollbar {
     display: none;
 }
@@ -192,4 +196,30 @@
 .scrollbar-hide {
     -ms-overflow-style: none;
     scrollbar-width: none;
+}
+
+
+/* For Chrome, Edge, and Safari */
+::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(100, 100, 100, 0.5);
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(100, 100, 100, 0.7);
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+/* For Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: rgba(100, 100, 100, 0.5) transparent;
 }
